fix: Add string trim on fields contianing evaluable data